objects/Holiday_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>CL_Contract__c</fullName>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Holiday Schedule</relationshipLabel>
        <relationshipName>Holiday_Schedule1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Holiday Schedule</label>
    <nameField>
        <displayFormat>HS-{0000000000}</displayFormat>
        <label>Holiday  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holiday Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>